cli/tests/ui/program_when_invalid_source.stderr
Error: manifest::invalid_when_path

  × check failed
  ╰─▶ invalid `when` path `bindings.api.url`: `when` must use `config.<path>`
      or `slots.<path>`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/program_when_invalid_source.json5:7:15]
 6 │       {
 7 │         when: "bindings.api.url",
   ·               ─────────┬────────
   ·                        ╰── `when` must use `config.<path>` or `slots.<path>`
 8 │         argv: ["--api", "${slots.api.url}"],
   ╰────
